syntax = "proto3";

service Log {
  rpc Append (AppendRequest) returns (AppendReply) {}

  rpc Read (ReadRequest) returns (ReadReply) {}

  rpc ListLogs (ListLogsRequest) returns (ListLogsReply) {}

  rpc CreateLog (CreateLogRequest) returns (CreateLogReply) {}

  rpc DeleteLog (DeleteLogRequest) returns (DeleteLogResponse) {}
}

message AppendRequest {
  string log_name = 1;
  repeated bytes data = 2;
}

message AppendReply {
  int64 index = 1;
}

message ReadRequest {
  string log_name = 1;
  int64 index = 2;
  int32 max_wait_time = 3;
  int32 min_bytes = 4;
  int32 max_bytes = 5;
}

message ReadReply {
  repeated bytes data = 1;
}

message ListLogsRequest {}

message ListLogsReply {
  message Log {
    string name = 1;
    int64 max_offset = 2;
    int64 min_offset = 3;
    int32 retention = 4;
  }

  repeated Log logs = 1;
}

message CreateLogRequest {
  string name = 1;
  int32 retention = 2;
}

message CreateLogReply {}

message DeleteLogRequest {
  string name = 1;
}

message DeleteLogResponse {}